demo-manage-api/demo-manage-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-manage-api-deploy
  namespace: default
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: demo-manage-api-deploy
  template:
    metadata:
      labels:
        app: demo-manage-api-deploy
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: demo-manage-api
        image: dnjsakf/demo-manage-api:latest
        ports:
        - containerPort: 9092
