demo-manage-api/demo-manage-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-manage-api-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: demo-manage-api
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 9092
